--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.7.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
+    "react-router-dom": "^6.26.0",
+    "react-scripts": "^5.0.1",
     "semantic-ui-css": "^2.4.1",
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
-    "json-server": "^0.15.1"
+    "json-server": "^0.15.1",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
     "start": "PORT=8000 react-scripts start",
-    "build":"react-scripts build",
+    "build": "react-scripts build",
     "server": "json-server --watch db.json -p 8002"
   },
   "eslintConfig": {
